--- a/main.html
+++ b/main.html
@@ -7,9 +7,32 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <form>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Name" required>
+
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+
+        <label for="address">Address</label>
+        <input type="text" id="address" name="address" placeholder="Address" required>
+
+        <label>
+            <input type="checkbox" id="livedWithDog" name="livedWithDog">
+            Have you ever lived with a Dog before?
+        </label>
+
+        <label for="breeds">Please select your preferred breeds</label>
+        <select id="breeds" name="breeds" multiple required>
+            <option value="labrador">Labrador</option>
+            <option value="beagle">Beagle</option>
+            <option value="germanshepherd">German Shepherd</option>
+            <option value="bulldog">Bulldog</option>
+            <option value="poodle">Poodle</option>
+        </select>
+
+        <button type="submit">Submit</button>
+    </form>
 
 </body>
 
