--- a/main.html
+++ b/main.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <form>
+    <form>
+        <!-- Name Field -->
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="Name" required>
 
+        <!-- Phone Number Field -->
         <label for="phone">Phone Number</label>
         <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
 
+        <!-- Address Field -->
         <label for="address">Address</label>
         <input type="text" id="address" name="address" placeholder="Address" required>
 
-        <label>
-            <input type="checkbox" id="livedWithDog" name="livedWithDog">
+        <!-- Checkbox -->
+        <label for="livedWithDog">
+            <input type="checkbox" id="livedWithDog" name="livedWithDog" value="yes">
             Have you ever lived with a Dog before?
         </label>
 
+        <!-- MultiSelect Dropdown -->
         <label for="breeds">Please select your preferred breeds</label>
         <select id="breeds" name="breeds" multiple required>
             <option value="labrador">Labrador</option>
@@ -31,9 +33,8 @@
             <option value="poodle">Poodle</option>
         </select>
 
+        <!-- Submit Button -->
         <button type="submit">Submit</button>
     </form>
-
 </body>
-
 </html>
