--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 
         <!-- Checkbox -->
         <label for="livedWithDog">
-            <input type="checkbox" id="livedWithDog" name="livedWithDog" value="yes">
+            <input type="checkbox" id="checkbox" name="livedWithDog" value="yes">
             Have you ever lived with a Dog before?
         </label>
 
